--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,11 @@ on: push
 name: Build
 jobs:
   build:
+    name: Build and Deploy
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,8 +27,9 @@ jobs:
       - name: Deploy
         uses: cloudflare/pages-action@v1
         with:
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           directory: build
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          projectName: phyrone
+          projectName: phyrone-de
 
