--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"qs": "^6.13.0",
+		"sass-embedded": "^1.79.5",
 		"sharp": "^0.33.5",
 		"svelte": "^4.2.19",
 		"svelte-check": "^4.0.5",
