💚 Add explicit branch names to GH Pages Deployment

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,3 +32,4 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           projectName: phyrone-de
+          branch: ${{ github.ref_name }}
