--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@types/eslint": "^9.6.1",
 		"@types/mdast": "^4.0.4",
+		"@types/persistent-cache": "^1.1.3",
 		"@types/qs": "^6.9.16",
 		"@types/remark-heading-id": "^1.0.0",
 		"@vitejs/plugin-legacy": "^5.4.2",
@@ -35,6 +36,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
 		"globals": "^15.11.0",
+		"persistent-cache": "^1.1.2",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
