--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,7 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
-  "rebaseWhen": "behind-base-branch",
-  "commitMessagePrefix": "⬆\uFE0F",
-  "automerge": true
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": ["config:recommended"],
+	"rebaseWhen": "behind-base-branch",
+	"commitMessagePrefix": "⬆\uFE0F",
+	"automerge": true
 }
