--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@unpic/placeholder": "^0.1.2",
 		"blurhash": "^2.0.5",
 		"case-formatter": "^1.1.2",
+		"feed": "^4.2.2",
 		"highlight.js": "^11.10.0",
 		"lucide": "^0.454.0",
 		"lucide-svelte": "^0.454.0",
