--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"lucide": "^0.454.0",
 		"lucide-svelte": "^0.454.0",
 		"mermaid": "^11.3.0",
+		"minify-xml": "^4.5.2",
 		"moment": "^2.30.1",
 		"remark": "^15.0.1",
 		"remark-directive": "^3.0.0",
